refactor: LineManager 도메인을 삭제하고, 역할을 Line 도메인에 이전한다