@@ -11,8 +11,8 @@ import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import subway.DomainFixture;
 
-@DisplayName("LineManager 클래스")
-class LineManagerTest {
+@DisplayName("Line 클래스")
+class LineTest {
 
     @Nested
     @DisplayName("connectDownSection 메소드는")
@@ -22,8 +22,6 @@ class LineManagerTest {
         @DisplayName("line의 하행과 새로운 section의 상행이 일치하는 section이 들어오면, section이 추가된다")
         void Connect_Section_When_Valid_Section_Input() {
             // given
-            Line line = new Line(1L, "line", "red");
-
             Station upStation = new Station(1L, "upStation");
             Station middleStation = new Station(2L, "middleStation");
             Station downStation = new Station(3L, "downStation");
@@ -31,10 +29,10 @@ class LineManagerTest {
             Section upSection = DomainFixture.Section.buildWithStations(upStation, middleStation);
             Section downSection = DomainFixture.Section.buildWithStations(middleStation, downStation);
 
-            LineManager lineManager = new LineManager(line, new ArrayList<>(List.of(upSection)));
+            Line line = new Line("line", "red", new ArrayList<>(List.of(upSection)));
 
             // when
-            lineManager.connectSection(downSection);
+            line.connectSection(downSection);
 
             // then
             assertThat(upSection.getDownSection()).isEqualTo(downSection);
@@ -44,8 +42,6 @@ class LineManagerTest {
         @DisplayName("line에 이미 존재하는 station이 새로운 section의 하행 station으로 입력된다면, IllegalArgumentException을 던진다")
         void Throw_IllegalArgumentException_When_Input_Exist_Station() {
             // given
-            Line line = new Line(1L, "line", "red");
-
             Station upStation = new Station(1L, "upStation");
             Station middleStation = new Station(2L, "middleStation");
             Station existStation = upStation;
@@ -53,10 +49,10 @@ class LineManagerTest {
             Section upSection = DomainFixture.Section.buildWithStations(upStation, middleStation);
             Section existSection = DomainFixture.Section.buildWithStations(middleStation, existStation);
 
-            LineManager lineManager = new LineManager(line, Arrays.asList(upSection));
+            Line line = new Line("line", "red", new ArrayList<>(List.of(upSection)));
 
             // when
-            Exception exception = catchException(() -> lineManager.connectSection(existSection));
+            Exception exception = catchException(() -> line.connectSection(existSection));
 
             // then
             assertThat(exception).isInstanceOf(IllegalArgumentException.class);
@@ -72,8 +68,6 @@ class LineManagerTest {
         @DisplayName("line의 하행 Station과 일치하는 Station이 들어오면 연결을 끊는다")
         void Return_True_When_Input_Station() {
             // given
-            Line line = new Line(1L, "line", "red");
-
             Station upStation = new Station(1L, "upStation");
             Station middleStation = new Station(2L, "middleStation");
             Station downStation = new Station(3L, "downStation");
@@ -81,11 +75,11 @@ class LineManagerTest {
             Section upSection = DomainFixture.Section.buildWithStations(upStation, middleStation);
             Section downSection = DomainFixture.Section.buildWithStations(middleStation, downStation);
 
-            LineManager lineManager = new LineManager(line, new ArrayList<>(List.of(upSection)));
-            lineManager.connectSection(downSection);
+            Line line = new Line("line", "red", new ArrayList<>(List.of(upSection)));
+            line.connectSection(downSection);
 
             // when
-            lineManager.disconnectDownSection(downStation);
+            line.disconnectDownSection(downStation);
 
             // then
             assertThat(upSection.getDownSection()).isNull();
@@ -96,8 +90,6 @@ class LineManagerTest {
         @DisplayName("입력된 Station이 line의 하행 Station과 일치 하지 않으면, IllegalArgumentException을 던진다")
         void Throw_IllegalArgumentException_When_Not_Equal_Station() {
             // given
-            Line line = new Line(1L, "line", "red");
-
             Station upStation = new Station(1L, "upStation");
             Station middleStation = new Station(2L, "middleStation");
             Station downStation = new Station(3L, "downStation");
@@ -105,11 +97,11 @@ class LineManagerTest {
             Section upSection = DomainFixture.Section.buildWithStations(upStation, middleStation);
             Section downSection = DomainFixture.Section.buildWithStations(middleStation, downStation);
 
-            LineManager lineManager = new LineManager(line, new ArrayList<>(List.of(upSection)));
-            lineManager.connectSection(downSection);
+            Line line = new Line("line", "red", new ArrayList<>(List.of(upSection)));
+            line.connectSection(downSection);
 
             // when
-            Exception exception = catchException(() -> lineManager.disconnectDownSection(upStation));
+            Exception exception = catchException(() -> line.disconnectDownSection(upStation));
 
             // then
             assertThat(exception).isInstanceOf(IllegalArgumentException.class);
@@ -119,17 +111,15 @@ class LineManagerTest {
         @DisplayName("line에 구간이 하나만 있다면, IllegalArgumentException을 던진다")
         void Throw_IllegalArgumentException_When_Line_Size_1() {
             // given
-            Line line = new Line(1L, "line", "red");
-
             Station upStation = new Station(1L, "upStation");
             Station downStation = new Station(3L, "downStation");
 
             Section upSection = DomainFixture.Section.buildWithStations(upStation, downStation);
 
-            LineManager lineManager = new LineManager(line, Arrays.asList(upSection));
+            Line line = new Line("line", "red", new ArrayList<>(List.of(upSection)));
 
             // when
-            Exception exception = catchException(() -> lineManager.disconnectDownSection(downStation));
+            Exception exception = catchException(() -> line.disconnectDownSection(downStation));
 
             // then
             assertThat(exception).isInstanceOf(IllegalArgumentException.class);
@@ -139,8 +129,6 @@ class LineManagerTest {
         @DisplayName("line의 중간에 있는 section을 삭제하려고 할 경우, IllegalArgumentException을 던진다")
         void Throw_IllegalArgumentException_When_Disconnect_Middle_Section() {
             // given
-            Line line = new Line(1L, "line", "red");
-
             Station upStation = new Station(1L, "upStation");
             Station middleUpStation = new Station(2L, "middleUpStation");
             Station middleDownStation = new Station(3L, "middleDownStation");
@@ -153,11 +141,10 @@ class LineManagerTest {
             upSection.connectSection(middleUpSection);
             middleUpSection.connectSection(middleDownSection);
 
-            LineManager lineManager = new LineManager(line,
-                    Arrays.asList(upSection, middleUpSection, middleDownSection));
+            Line line = new Line("line", "red", Arrays.asList(upSection, middleUpSection, middleDownSection));
 
             // when
-            Exception exception = catchException(() -> lineManager.disconnectDownSection(middleUpStation));
+            Exception exception = catchException(() -> line.disconnectDownSection(middleUpStation));
 
             // then
             assertThat(exception).isInstanceOf(IllegalArgumentException.class);
@@ -172,20 +159,18 @@ class LineManagerTest {
         @DisplayName("입력으로 들어온 Section의 하행 station과 line의 상행 종점 station이 일치하면, 연결을 성공한다")
         void Connect_Success_When_Input_Down_Station_Equals_Line_Up_Station() {
             // given
-            Line line = new Line(1L, "line", "red");
-
             Station upStation = new Station(1L, "upStation");
             Station middleStation = new Station(2L, "middleStation");
             Station downStation = new Station(3L, "downStation");
 
             Section section = DomainFixture.Section.buildWithStations(middleStation, downStation);
 
-            LineManager lineManager = new LineManager(line, new ArrayList<>(List.of(section)));
+            Line line = new Line("line", "red", new ArrayList<>(List.of(section)));
 
             Section requestSection = DomainFixture.Section.buildWithStations(upStation, middleStation);
 
             // when
-            Exception exception = catchException(() -> lineManager.connectSection(requestSection));
+            Exception exception = catchException(() -> line.connectSection(requestSection));
 
             // then
             assertThat(exception).isNull();
@@ -197,19 +182,17 @@ class LineManagerTest {
         @DisplayName("입력으로 들어온 Section의 상행, 하행 역이 line에 모두 존재할 경우, IllegalArgumentException을 던진다")
         void Throw_IllegalArgumentException_When_UpStation_And_DownStation_All_Exists() {
             // given
-            Line line = new Line(1L, "line", "red");
-
             Station upStation = new Station(1L, "upStation");
             Station middleStation = new Station(2L, "middleStation");
 
             Section section = DomainFixture.Section.buildWithStations(upStation, middleStation, 2);
 
-            LineManager lineManager = new LineManager(line, new ArrayList<>(List.of(section)));
+            Line line = new Line("line", "red", new ArrayList<>(List.of(section)));
 
             Section requestSection = DomainFixture.Section.buildWithStations(upStation, middleStation, 1);
 
             // when
-            Exception exception = catchException(() -> lineManager.connectSection(requestSection));
+            Exception exception = catchException(() -> line.connectSection(requestSection));
 
             // then
             assertThat(exception).isInstanceOf(IllegalArgumentException.class);
@@ -224,8 +207,6 @@ class LineManagerTest {
         @DisplayName("정렬된 line의 상행 종점을 기준으로 정렬된 stations을 반환한다.")
         void Return_Sorted_Stations_Orders_By_Line_UpStations() {
             // given
-            Line line = new Line(1L, "line", "red");
-
             Station upStation = new Station(1L, "upStation");
             Station middleStation = new Station(2L, "middleStation");
             Station downStation = new Station(3L, "downStation");
@@ -233,10 +214,10 @@ class LineManagerTest {
             Section section = DomainFixture.Section.buildWithStations(middleStation, downStation);
             Section requestSection = DomainFixture.Section.buildWithStations(upStation, middleStation);
 
-            LineManager lineManager = new LineManager(line, new ArrayList<>(List.of(requestSection, section)));
+            Line line = new Line(1L, "line", "red", new ArrayList<>(List.of(requestSection, section)));
 
             // when
-            List<Station> result = lineManager.getSortedStations();
+            List<Station> result = line.getSortedStations();
 
             // then
             assertThat(result).containsExactly(upStation, middleStation, downStation);
